--- a/ThesisLatex/Bibliog.bib
+++ b/ThesisLatex/Bibliog.bib
@@ -439,3 +439,21 @@
   author=	{Gruska, Jozef},
   year=		{2004}
 }
+
+@article{mishra2006some,
+  title=	{Some new test functions for global optimization and performance of repulsive particle swarm method},
+  author=	{Mishra, Sudhanshu},
+  year=		{2006},
+  publisher=	{North-Eastern Hill University, Shillong (India)}
+}
+
+@article{silagadze2007finding,
+  title=	{Finding two-dimensional peaks},
+  author=	{Silagadze, ZK},
+  journal=	{Physics of Particles and Nuclei Letters},
+  volume=	{4},
+  number=	{1},
+  pages=	{73--80},
+  year=		{2007},
+  publisher=	{Springer}
+}
