--- a/ThesisLatex/Cap_5.tex
+++ b/ThesisLatex/Cap_5.tex
@@ -1,16 +1,21 @@
 \chapter{Pruebas y Resultados}
 
-The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee fdgsdfss.
+\section{Escenarios de prueba}
 
-Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+Como se indicó desde un principio, los escenarios para las pruebas son un conjunto de funciones \textit{benchmark} orientadas a problemas de optimización de objetivo único especialmente seleccionadas para evaluar el desempeño de los algoritmos derivados comparativamente con respecto al algoritmo original. Las funciones fueron seleccionadas a partir de \cite{mishra2006some} \cite{silagadze2007finding}.
 
-The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee fdgsdfss.
-
-Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
-
-The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee fdgsdfss.
-
-Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+\begin{table}[h]
+\begin{tabularx}{\textwidth}{ |X|X|X|X| }
+\hline
+Función			& Fórmula 		& Valor mínimo		& Dominio de búsqueda \\ \hline
+Función de Arckley	& No			& No			& No   \\
+Función de Booth   	& No			& No			& No   \\
+Función de Maytas   	& No			& No			& No   \\
+\hline
+\end{tabularx}
+\caption{Descripción de las funciones de prueba}
+ \label{table5-1}
+\end{table}
 
 \begin{figure}
    \centering
@@ -18,6 +23,46 @@ Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is ad
    \caption{Función Benchmark: Arckley}
    \label{figure5-1}
 \end{figure}
+
+\begin{figure}
+   \centering
+    \includegraphics{./Figures/Functions/booth.pdf}%
+   \caption{Función Benchmark: Booth}
+   \label{figure5-8}
+\end{figure}
+
+\begin{figure}
+   \centering
+    \includegraphics{./Figures/Functions/maytas.pdf}%
+   \caption{Función Benchmark: Maytas}
+   \label{figure5-15}
+\end{figure}
+
+
+
+\section{Condiciones para las pruebas}
+
+\section{Resultados}
+
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{}
+
+The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee fdgsdfss.
+
+Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+
+The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee fdgsdfss.
+
+Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+
+The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee fdgsdfss.
+
+Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+
 
 \begin{figure}
    \centering
@@ -73,12 +118,6 @@ The path of the righteous man is beset on all sides by the iniquities of the sel
 
 Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
 
-\begin{figure}
-   \centering
-    \includegraphics{./Figures/Functions/booth.pdf}%
-   \caption{Función Benchmark: Booth}
-   \label{figure5-8}
-\end{figure}
 
 \begin{figure}
    \centering
@@ -133,13 +172,6 @@ Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is ad
 The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee fdgsdfss.
 
 Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
-
-\begin{figure}
-   \centering
-    \includegraphics{./Figures/Functions/maytas.pdf}%
-   \caption{Función Benchmark: Maytas}
-   \label{figure5-15}
-\end{figure}
 
 \begin{figure}
    \centering
