--- a/ThesisLatex/Cap_2.tex
+++ b/ThesisLatex/Cap_2.tex
@@ -2,9 +2,9 @@
 
 Mientras que los primeros estudios sobre computación cuántica fueron propuestos en la década de los ochenta \cite{benioff1980} \cite{benioff1982quantum}, el primer trabajo sobre técnicas de inteligencia computacional de inspiración cuántica recién fue presentado hacia finales de la década de los noventa \cite{narayanan1996quantum}. A diferencia de los ``auténticos'' algoritmos cuánticos tales como el algoritmo de Grover \cite{grover1996fast} o el algoritmo de Shor \cite{shor1994algorithms}, los algoritmos de inspiración cuántica no requieren de una computadora cuántica para ser implementados, sino que implementan niveles adicionales de aleatoriedad inspirados en conceptos y principios de la computación cuántica, tales como los \textit{qubits}, la \textit{interferencia} o la \textit{superposición de estados} \cite{nowotniaksurvey}. 
 
-El primer trabajo que realmente se puede considerar como un algoritmo evolutivo de inspiración cuántica fue presentado en el año 2001 \cite{han2000genetic}, el mismo que presenta el algoritmo evolutivo de inspiración cuántica base. Es acá cuando se introducen los conceptos de qubits y superposición de estados, además de la representación de individuos basados en el concepto de qubits. Se tratarán estos conceptos con mayor profundidad en el siguiente capítulo.
+El primer trabajo que realmente se puede considerar como un \ac{QIEA} fue presentado en el año 2001 \cite{han2000genetic}, el mismo que presenta el \ac{QIEA}-$\mathbb{R}$. Es acá cuando se introducen los conceptos de qubits y superposición de estados, además de la representación de individuos basados en el concepto de qubits. Se tratarán estos conceptos con mayor profundidad en el siguiente capítulo.
 
-\section{Variantes y modificaciones del Algoritmo Evolutivo de Inspiración Cuántica}
+\section{Variantes y modificaciones del \ac{QIEA}}
 
 Debido al poco tiempo de vida de este campo  -menos de tres lustros, en realidad-, el área se encuentra aún en crecimiento y sólo existen unos pocos cientos de artículos sobre el tema \cite{nowotniak2014higher}. Desde el año 2007 se ha dado un incremento notable en la investigación relacionada, concentrando esfuerzos mayoritariamente en aplicaciones, seguido por innovaciones tanto en los operadores genéticos como en las representaciones \cite{nowotniaksurvey}.
 
