--- a/ThesisLatex/Tesis.tex
+++ b/ThesisLatex/Tesis.tex
@@ -15,6 +15,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{pgfplots}
+\usepackage{tabularx}
 
 \title{Título de la Tesis}
 
@@ -43,8 +44,8 @@
 \include{abreviaturas}
 
 %\input{Agradecimientos} %Inserta los agradecimientos
-\input{Resumen} %Inserta el resumen
 \input{Abstract} %Inserta el abstract
+\input{Resumen} %Inserta el resumen
 
 \pagenumbering{roman}
 \setcounter{page}{1}
