--- a/ThesisLatex/Cap_1.tex
+++ b/ThesisLatex/Cap_1.tex
@@ -14,13 +14,13 @@ Dada la relativa novedad del campo, los algoritmos evolutivos de inspiración gen
 
 Se puede afirmar con certeza que el grueso de soluciones y aplicaciones a partir del \ac{QIEA} original contemplan actualizaciones de los individuos cuánticos basadas tanto en la evaluación de, como en la interacción entre individuos clásicos generados a partir de éstos \cite{nowotniak2014higher}. Esta visión es heredera del accionar propio de distintos tipos de algoritmos evolutivos estudiados y evaluados desde tiempo atrás que se pusiera ojos en la inspiración cuántica.
 
-Se puede apreciar también que los individuos cuánticos en sí no son directamente evaluados, y mucho menos poseen una verdadera interacción entre sí. A pesar de ser la parte esencial de los algoritmos evolutivos de inspiración cuántica como generadores de individuos cuánticos, son estos últimos los que realmente presentan las características propias de los algoritmos evolutivos, tales como operadores de mutación y cruzamiento, entre otras.
+Se puede apreciar también que los individuos cuánticos en sí no son directamente evaluados, y mucho menos poseen una verdadera interacción entre sí. A pesar de ser la parte esencial de los algoritmos evolutivos de inspiración cuántica como generadores de individuos cuánticos, son estos últimos los que realmente presentan las características propias de los algoritmos evolutivos, tales como operadores de mutación y recombinación, entre otras.
 
 Como se verá en el Capítulo 3, uno de los requerimientos para la formulación de un algoritmo de inspiración cuántica es, de existir alguna separación del campo de búsqueda en universos, permitir la existencia de alguna interacción entre los mismos, la cual ha de permitir hallar la solución o ayudar a que los sub-problemas al interior de cada universo puedan ser resueltos \cite{da2007algoritmos}. Este requerimiento permitiría controlar de forma más eficiente el grado de actualización global y local, y podría verse cumplido mediante una separación de los espacios de acción de los respectivos individuos cuánticos en universos únicos, los cuales puedan compartir mutuamente sus mejoras para incrementar el espacio de búsqueda de cada cual. %De esta manera, los individuos cuánticos podrían ejecutar operadores que hasta el momento sólo se habían reservado para los individuos clásicos.
 
 \section{Objetivos}
 
-El principal objetivo de la presente tesis es la evaluación del desempeño de un \ac{QIEA} para $\mathbb{R}$ que presente las características de segregación/interacción entre universos de operación para cada individuo cuántico en operación. La evaluación es comparativa y se hará con respecto al \ac{QIEA}-$\mathbb{R}$ original. Se busca evaluar y explorar el hecho de poder tener mayor control sobre el grado de localidad y globalidad de la actualización de cada individuo cuántico mediante la segregación del campo operativo de los mismos, así como la incorporación de un operador de cruzamiento que funcione a este nivel.
+El principal objetivo de la presente tesis es la evaluación del desempeño de un \ac{QIEA} para $\mathbb{R}$ que presente las características de segregación/interacción entre universos de operación para cada individuo cuántico en operación. La evaluación es comparativa y se hará con respecto al \ac{QIEA}-$\mathbb{R}$ original. Se busca evaluar y explorar el hecho de poder tener mayor control sobre el grado de localidad y globalidad de la actualización de cada individuo cuántico mediante la segregación del campo operativo de los mismos, así como la incorporación de un operador de recombinación que funcione a este nivel.
 
 \subsection{Objetivos Específicos}
 
