--- a/ThesisLatex/Cap_4.tex
+++ b/ThesisLatex/Cap_4.tex
@@ -1,6 +1,6 @@
 \chapter{Propuesta}
 
-Como ya fue mencionado en su momento en la introducción de la presente tesis, se busca evaluar el desempeño de un algoritmo \ac{QIEA} para $\mathbb{R}$ que presente las características de segregación/interacción entre universos de operación para cada individuo cuántico en operación con respecto al algoritmo original, con el fin de obtener mayor control sobre el grado de localidad y globalidad de la actualización de cada individuo cuántico mediante la segregación del campo operativo de los mismos, así como la incorporación de un operador de cruzamiento que funcione a este nivel. 
+Como ya fue mencionado en su momento en la introducción de la presente tesis, se busca evaluar el desempeño de un algoritmo \ac{QIEA} para $\mathbb{R}$ que presente las características de segregación/interacción entre universos de operación para cada individuo cuántico en operación con respecto al algoritmo original, con el fin de obtener mayor control sobre el grado de localidad y globalidad de la actualización de cada individuo cuántico mediante la segregación del campo operativo de los mismos, así como la incorporación de un operador de recombinación que funcione a este nivel. 
 
 Se escogió trabajar sobre el algoritmo para $\mathbb{R}$ debido a la menor cantidad de investigación realizada sobre el mismo a diferencia de la versión original orientada a $\mathbb{B}$. Además, cabe considerar la relativa simplicidad de su evaluación, la cual se hará sobre funciones \textit{benchmark} -se verá con más detalle este apartado en el siguiente capítulo-.
 
@@ -12,13 +12,13 @@ Como se vió al principio de la sección 3.3 del presente documento, hay algunas c
 
 Es por ello que para este caso, se propone de forma inicial la segregación completa de los campos de operación de cada individuo cuántico en universos con nula interacción a nivel de individuos cuánticos entre sí. Ya sea que se particione o no el espacio de búsqueda, cada universo evaluará sus respectivas generaciones de individuos clásicos de forma independiente.
 
-\section{Operador de cruzamiento para los individuos cuánticos}
+\section{Operador de recombinación para los individuos cuánticos}
 
 Si, como se vió en el punto anterior, se limita la capacidad de interacción a nivel de individuos clásicos entre individuos sin ofrecer otra forma de interacción entre universos, se volvería a un escenario en el que se incumplen las condiciones para la propuesta de algoritmos evolutivos de  inspiración cuántica mostrados en la tercera sección del anterior capítulo. Esta vez, a diferencia del algoritmo original, el énfasis estaría en la nulidad de la interacción entre universos.
 
-Ya se ha hecho notar con anterioridad en la introducción que el énfasis del cruzamiento en los algoritmos hasta la actualidad sigue recayendo en los individuos clásicos. Por lo tanto, la forma mas lógica de cumplir esta característica sin entrar en conflicto con la condición descrita en la sección anterior, sería introducir un operador de cruzamiento que trabaje directamente entre individuos cuánticos.
+Ya se ha hecho notar con anterioridad en la introducción que el énfasis de la recombinación en los algoritmos hasta la actualidad sigue recayendo en los individuos clásicos. Por lo tanto, la forma mas lógica de cumplir esta característica sin entrar en conflicto con la condición descrita en la sección anterior, sería introducir un operador de recombinación que trabaje directamente entre individuos cuánticos.
 
-Existen diversos modelos de cruzamiento a nivel de individuos clásicos, los cuales ya fueron descritos en el capítulo anterior. Para el presente trabajo se ha elegido trabajar con un operador elitista que, para cada iteración, seleccione tanto al mejor como al peor elemento cuántico. Las características del mejor operador cuántico (que en realidad refiere al espacio de búsqueda del mismo) serán agregados a las del peor elemento cuántico. De esta manera, se busca incrementar la capacidad de generación de individuos clásicos de calidad para los individuos cuánticos de desempeño más discreto.
+Existen diversos modelos de recombinación a nivel de individuos clásicos, los cuales ya fueron descritos en el capítulo anterior. Para el presente trabajo se ha elegido trabajar con un operador elitista que, para cada iteración, seleccione tanto al mejor como al peor elemento cuántico. Las características del mejor operador cuántico (que en realidad refiere al espacio de búsqueda del mismo) serán agregados a las del peor elemento cuántico. De esta manera, se busca incrementar la capacidad de generación de individuos clásicos de calidad para los individuos cuánticos de desempeño más discreto.
 
 Como es evidente, no es posible evaluar directamente a un individuo cuántico mediante una función \textit{fitness} como si se hace con los individuos clásicos. Sin embargo, si es posible evaluar a los individuos clásicos generados por cada individuo cuántico. De esta forma, a cada individuo cuántico se le evaluaría la calidad de la generación de individuos clásicos que respondan bien ante las circunstancias a evaluar.
 
@@ -26,14 +26,14 @@ Como es evidente, no es posible evaluar directamente a un individuo cuántico med
 
 Para efectos de nomenclatura, se ha decidido utilizar el nombre \ac{QIEA}$\mathbb{R}$ para denominar al algoritmo original sobre el cual se realizan las modificaciones ya explicadas. De acuerdo a lo ya expuesto en secciones anteriores, el espacio de búsqueda puede o no estar particionado, por lo que para indicar la existencia de un particionamiento en el mismo, se usará el sufijo $-p$.
 
-De la misma manera, se utilizará el prefijo $U$ para indicar que los espacios de búsqueda para cada individuo cuántico están siendo segregados. Finalmente, el sufijo $CO$  será empleado para indicar la implementación del operador de cruzamiento entre individuos cuánticos.
+De la misma manera, se utilizará el prefijo $U$ para indicar que los espacios de búsqueda para cada individuo cuántico están siendo segregados. Finalmente, el sufijo $CO$  será empleado para indicar la implementación del operador de recombinación entre individuos cuánticos.
 
 A partir de esto, se evidencia la existencia de dos algoritmos originales y 7 modificaciones al mismo de acuerdo a la incorporación de las dos características novedosas ya detalladas. Una explicación más clara de esto se puede ver en la Tabla 4.1.
 
 \begin{table}[h]
 \begin{tabularx}{\textwidth}{ |X|X|X|X| }
 \hline
-Algoritmo                    & Espacio de \newline búsqueda \newline particionado & Campo de acción \newline de individuos \newline  cuánticos segregado \newline en universos & Operador de \newline cruzamiento para \newline individuos \newline cuánticos \\ \hline
+Algoritmo                    & Espacio de \newline búsqueda \newline particionado & Campo de acción \newline de individuos \newline  cuánticos segregado \newline en universos & Operador de \newline recombinación para \newline individuos \newline cuánticos \\ \hline
 \ac{QIEA}$\mathbb{R}$      & No                               & No                                                             & No                                                \\
 U\ac{QIEA}$\mathbb{R}$     & No                               & Si                                                             & No                                                \\
 \ac{QIEA}$\mathbb{R}$-CO   & No                               & No                                                             & Si                                                \\
