--- a/ThesisLatex/conclusiones.tex
+++ b/ThesisLatex/conclusiones.tex
@@ -1,10 +1,10 @@
 \chapter{Conclusiones y Trabajos Futuros}\label{chap:conclusiones}
 
-El presente trabajo ha propuesto distintas modificaciones al algoritmo original \ac{QIEA}$\mathbb{R}$ con la expectativa por obtener resultados mejores en términos de tiempo de convergencia y calidad de datos generados. En términos generales, los únicos algoritmos que han registrado resultados medianamente consistentes y competitivos a lo largo de todas las pruebas son las variantes que implementan el operador de cruzamiento en espacios particionados. Esto es: \ac{QIEA}$\mathbb{R}$-pCO y U\ac{QIEA}$\mathbb{R}$-pCO.
+El presente trabajo ha propuesto distintas modificaciones al algoritmo original \ac{QIEA}$\mathbb{R}$ con la expectativa por obtener resultados mejores en términos de tiempo de convergencia y calidad de datos generados. En términos generales, los únicos algoritmos que han registrado resultados medianamente consistentes y competitivos a lo largo de todas las pruebas son las variantes que implementan el operador de recombinación en espacios particionados. Esto es: \ac{QIEA}$\mathbb{R}$-pCO y U\ac{QIEA}$\mathbb{R}$-pCO.
 
 Desafortunadamente, en los casos en los que registran mejoras sobre los algoritmos originales (sean \ac{QIEA}$\mathbb{R}$ y \ac{QIEA}$\mathbb{R}$-p), ésta no resulta ser muy notoria. Además, hay otra cantidad similar de casos en los que ambos se ven superados, ya sea por uno u otro.
 
-Los demás algoritmos propuestos obtuvieron resultados más irregulares y menos óptimos, por lo que se desaconseja su consideración a futuro. Cabe destacar que los algoritmos con peores resultados en general fueron los que implementaban el particionamiento del espacio de búsqueda sin el operador de cruzamiento.
+Los demás algoritmos propuestos obtuvieron resultados más irregulares y menos óptimos, por lo que se desaconseja su consideración a futuro. Cabe destacar que los algoritmos con peores resultados en general fueron los que implementaban el particionamiento del espacio de búsqueda sin el operador de recombinación.
 
 \section{Problemas encontrados}
 La segunda  parte de ests capítulo corresponde a los problemas encontrados. esta seccion es muy importante para que los siguientes estudiantes que hagan algo en esta línea no cometan los mismos errores y tu tesis sea un buen peldaño para avanzar más rápido.
