--- a/Slides/slides.tex
+++ b/Slides/slides.tex
@@ -10,7 +10,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 
-\title{Algoritmo Evolutivo Concurrente de Inspiración Cuántica en $\mathbb{R}$ para problemas de optimización de objetivo único}
+\title{Modelo de algoritmo evolutivo de inspiración cuántica QIEA-$\mathbb{R}$ con control de interacción entre universos}
 \author{José Carlos Delgado Ramos}
 \institute{Escuela Profesional de Ciencia de la Computación\\Universidad Católica San Pablo}
 
@@ -27,10 +27,18 @@
 \end{frame}
 
 \begin{frame}
+ \frametitle{Computación Cuántica}
+\begin{itemize}
+ \item Campo de mucho futuro, posibilidades completamente inimaginables para el paradigma tradicional.
+ \item Inexistencia de ordenadores cuánticos prácticos a día de hoy: mucho futuro, todavía
+\end{itemize}
+\end{frame}
+
+\begin{frame}
  \frametitle{Introducción}
 \begin{itemize}
  \item Algoritmos Evolutivos de Inspiración Cuántica: campo relativamente novedoso.
- \item Busca incorporar algunas de las ventajas de la Computación Cuántica a algoritmos de computación tradicional (basada en transistores y puertas lógica de dos valores).
+ \item Busca incorporar algunas de los elementos propios de la Computación Cuántica a algoritmos de computación tradicional (basada en transistores y puertas lógica de dos valores).
 \end{itemize}
 \end{frame}
 
