--- a/ThesisLatex/Tesis.tex
+++ b/ThesisLatex/Tesis.tex
@@ -17,7 +17,7 @@
 \usepackage{pgfplots}
 \usepackage{tabularx}
 
-\title{Título de la Tesis}
+\title{Modelo de algoritmo evolutivo de inspiración cuántica QIEA-$\mathbb{R}$ con control de interacción entre universos}
 
 \author{José Carlos Delgado Ramos}
 
