--- a/ThesisLatex/conclusiones.tex
+++ b/ThesisLatex/conclusiones.tex
@@ -1,18 +1,19 @@
 \chapter{Conclusiones y Trabajos Futuros}\label{chap:conclusiones}
 
-El presente trabajo ha propuesto distintas modificaciones al algoritmo original \ac{QIEA}$\mathbb{R}$ con la expectativa por obtener resultados mejores en términos de tiempo de convergencia y calidad de datos generados. En términos generales, los únicos algoritmos que han registrado resultados medianamente consistentes y competitivos a lo largo de todas las pruebas son las variantes que implementan el operador de recombinación en espacios particionados. Esto es: \ac{QIEA}$\mathbb{R}$-pCO y U\ac{QIEA}$\mathbb{R}$-pCO.
+El presente trabajo ha propuesto distintas modificaciones al algoritmo original \ac{QIEA}$\mathbb{R}$ con la expectativa por obtener resultados mejores en términos de tiempo de convergencia y calidad de datos generados. En términos generales, los únicos algoritmos que han registrado resultados medianamente consistentes y competitivos en términos de rapidez de convergencia así como de calidad de datos a lo largo de todas las pruebas son las variantes que implementan el operador de recombinación en espacios particionados. Esto es: \ac{QIEA}$\mathbb{R}$-pCO y U\ac{QIEA}$\mathbb{R}$-pCO. Ambos han logrado obtener resultados mejores que los algoritmos originales (\ac{QIEA}$\mathbb{R}$ y \ac{QIEA}$\mathbb{R}$-p), en casos donde el número de individuos clásicos generados por individuo cuántico por iteración es más bajo. Cuando el número de individuos clásicos aumenta, los algoritmos originales terminan comportandose de una manera más eficiente. Por lo tanto, se puede concluir que el operador de cruzamiento propuesto es una alternativa válida que reduce la necesidad de generar y una cantidad alta de individuos clásicos.
 
-Desafortunadamente, en los casos en los que registran mejoras sobre los algoritmos originales (sean \ac{QIEA}$\mathbb{R}$ y \ac{QIEA}$\mathbb{R}$-p), ésta no resulta ser muy notoria. Además, hay otra cantidad similar de casos en los que ambos se ven superados, ya sea por uno u otro.
+Por otro lado, los algoritmos que implementan la segregación en los campos de operación de cada individuo clásico no manifiestan una diferencia sustancial que permita distinguirlos de sus contrapartes no segregadas. En los casos en los que un algoritmo con espacios de búsqueda segregados por individuo cuántico destaca -U\ac{QIEA}$\mathbb{R}$-pCO es un buen ejemplo de este caso-, parece ser más influencia del propio operador de cruzamiento que de la segregación propiamente dicha.
 
 Los demás algoritmos propuestos obtuvieron resultados más irregulares y menos óptimos, por lo que se desaconseja su consideración a futuro. Cabe destacar que los algoritmos con peores resultados en general fueron los que implementaban el particionamiento del espacio de búsqueda sin el operador de recombinación.
 
 \section{Problemas encontrados}
-La segunda  parte de ests capítulo corresponde a los problemas encontrados. esta seccion es muy importante para que los siguientes estudiantes que hagan algo en esta línea no cometan los mismos errores y tu tesis sea un buen peldaño para avanzar más rápido.
+Un problema inherente al propio desarrollo de la presente tesis es la propia tendencia del algoritmo a sobreincrementar rápidamente sus espacios de búsqueda tras un espacio de tiempo en el que no se hallan mejores soluciones, por lo que las propuestas no se han podido evaluar para problemas con espacios de búsqueda mayores a los escogidos en el prseente trabajo.
 
-\section{Recomendaciones}
-En esta sección el tesista debe reflejar que la tesis ha permitido adquirir nuevos conocimientos que podrían servir para guiar otros trabajos en el futuro.
+Las pruebas en funciones con mínimos ubicados cercanos en los extremos de los espacios de búsqueda también han representado un reto que no se pudo asumir, debido a la inexistencia de una metodología apropiada para la delimitación de la expansión en el espacio de búsqueda del algoritmo original, y por tanto, tampoco en los aquí propuestos. El comportamiento del algoritmo lo impulsa a buscar más mínimos fuera de dichos límites, por lo que terminarían tendiendo hacia un mínimo no contemplado al interior del espacio de búsqueda. 
+
+%\section{Recomendaciones}
 
 \section{Trabajos futuros}
-En base a los puntos anteriores es recomendable que tu tesis también sugiera trabajos futuros. Esta sección es esecialmente útil para otras ideas de tesis.
+Para futuras evaluaciones, se planea tomar en consideración la implementación de otras metodologías tanto para la actualización de los individuos cuánticos como para la propia selección de los mejores individuos clásicos. De esta manera, se tendría un conjunto más amplio de situaciones sobre las cuales evaluar a los algoritmos aquí propuestos.
 
-Todo este capítulo no debe ser más de unas 4 páginas.
+Se vislumbra como posibilidad como complemento para el actual trabajo la ejecución de pruebas sobre funciones multiobjetivo, en las que se evaluaría no solamente la convergencia hacia un mínimo o máximo, sino también la detección de la ocurrencia de la convergencia hacia cada óptimo por separado. 
